feat: 增加注册接口
